# REIT4842_Red_Teaming_Bot

./: CONTRIBUTING.md  README.md  SECURITY.md
backend/: .env  .gitignore  pyproject.toml
backend/src/: main.py
backend/src/app/: __init__.py  chatbot.py
backend/src/chat_core/: __init__.py  chatbot.py  routes.py
backend/src/chat_core/database/: __init__.py  fetch.py  models.py
backend/tests/: __init__.py
frontend/: eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/cypress/e2e/: chat-widget.cy.ts  chatbots.cy.ts  new-chatbot.cy.ts  overview.cy.ts
frontend/cypress/fixtures/: chatbots.json
frontend/cypress/support/: commands.ts  e2e.ts
frontend/src/: App.jsx  setupTests.ts
frontend/src/components/: Navbar.tsx
frontend/src/components/__tests__/: Navbar.test.tsx
frontend/src/pages/: ChatbotWidget.tsx  Chatbots.tsx  NewChatbot.tsx  Overview.tsx
frontend/src/pages/__tests__/: ChatbotWidget.test.tsx  Chatbots.test.tsx  NewChatbot.test.tsx  Overview.test.tsx
frontend/src/tests/: App.test.jsx
frontend/src/utils/: csrfLoader.ts
frontend/src/utils/__tests__/: csrfLoader.test.ts
