[project]
name = "chatbot"
version = "0.1.0"
description = ""
authors = [
    {name = "RAHUL SAGAR PABBA",email = "rahulsagarpabba5@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "transformers (>=4.52.4,<5.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
