[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["RAHUL SAGAR PABBA <rahulsagarpabba5@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
transformers = ">=4.52.4,<5.0.0"
scikit-learn = ">=1.7.0,<2.0.0"
ragas-red-team = { path = "../../backend", develop = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
